Fixed svg alignment

--- a/www/src/Components/Navigation.scss
+++ b/www/src/Components/Navigation.scss
@@ -48,6 +48,11 @@ nav.navbar {
 	width: auto;
 }
 
+.navbar-actions svg {
+	height: 1em;
+	width: auto;
+}
+
 @media (max-width: 767.98px) {
 	nav.navbar {
 		.navbar-actions {
