--- a/www/src/index.scss
+++ b/www/src/index.scss
@@ -96,7 +96,7 @@ button,
 	border-radius: 999px;
 
 	svg {
-		transform: translateY(-0.125rem);
+		flex-shrink: 0;
 	}
 }
 
